test/asm/charval.err
error: charval.asm(23):
    CHARVAL: Character mapping for "b" must have a single value
error: charval.asm(24):
    CHARVAL: No character mapping for "ab"
error: charval.asm(25):
    CHARVAL: No character mapping for "abc"
error: charval.asm(26):
    CHARVAL: No character mapping for "cd"
error: charval.asm(27):
    CHARVAL: No character mapping for "xyz"
warning: charval.asm(28): [-Wbuiltin-args]
    CHARVAL: Index starts at 0
warning: charval.asm(29): [-Wbuiltin-args]
    CHARVAL: Index 10 is past the end of the character mapping
Assembly aborted with 5 errors!
